; ModuleID = '/home/carl/AnghaBench/redis/src/extr_zmalloc.c_zmalloc_get_allocator_info.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_zmalloc.c_zmalloc_get_allocator_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zmalloc_get_allocator_info(i64* %0, i64* %1, i64* %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = load i64*, i64** %5, align 8
  store i64 0, i64* %7, align 8
  %8 = load i64*, i64** %6, align 8
  store i64 0, i64* %8, align 8
  %9 = load i64*, i64** %4, align 8
  store i64 0, i64* %9, align 8
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
